--- a/debug_model.ipynb
+++ b/debug_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
     "# gpus = tf.config.experimental.list_physical_devices(device_type='GPU')\n",
     "# tf.config.experimental.set_virtual_device_configuration(gpus[0],[tf.config.experimental.VirtualDeviceConfiguration(memory_limit=2048)])\n",
     "from train import ABSATrainer\n",
-    "from datasets import EnglishDataset, TestTokenizer, ChineseDataset\n",
+    "from my_datasets import EnglishDataset, TestTokenizer, ChineseDataset\n",
     "from transformers import AutoTokenizer, TFAutoModel\n",
     "from label_mappings import *\n",
     "from utils.eval_utils import quick_test"
@@ -2915,11 +2915,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2933,7 +2930,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5 (default, Sep  4 2020, 07:30:14) \n[GCC 7.3.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ab1f4777d8eb8dfce46131a069ac753eeb3c9da22cbbba2710843f8e042f9b4a"
+   }
   }
  },
  "nbformat": 4,
