process yahoo_answer

--- a/download_data.ipynb
+++ b/download_data.ipynb
@@ -2,10 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import random\n",
+    "import numpy as np\n",
     "from datasets import list_datasets, load_dataset\n",
     "from nltk.corpus import wordnet"
    ]
@@ -26,29 +29,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = load_dataset(\"amazon_us_reviews\", 'Wireless_v1_00', split='train', streaming=True)"
+    "# process yahoo_answer_data\n",
+    "ds = load_dataset(\"yahoo_answers_topics\", split='train')\n",
+    "TOPICS = [\n",
+    "    \"Society & Culture\",\n",
+    "    \"Science & Mathematics\",\n",
+    "    \"Health\",\n",
+    "    \"Education & Reference\",\n",
+    "    \"Computers & Internet\",\n",
+    "    \"Sports\",\n",
+    "    \"Business & Finance\",\n",
+    "    \"Entertainment & Music\",\n",
+    "    \"Family & Relationships\",\n",
+    "    \"Politics & Government\",\n",
+    "]\n",
+    "label_to_topic = {k: v for k, v in enumerate(TOPICS)}\n",
+    "df = ds.to_pandas()\n",
+    "part_df = df.sample(200000)[[\"topic\", \"question_title\", \"best_answer\"]]\n",
+    "remain_df = df.drop(index=part_df.index)\n",
+    "remain_df.reset_index(inplace=True, drop=True)\n",
+    "part_df.reset_index(inplace=True, drop=True)\n",
+    "answer_pools = {k: remain_df[remain_df[\"topic\"]==k][\"best_answer\"].reset_index(drop=True) for k in range(len(TOPICS))}\n",
+    "\n",
+    "def gen_fake_answer(topic_id):\n",
+    "    candidate_topics = list(range(10))\n",
+    "    candidate_topics.pop(topic_id)\n",
+    "    fake_topic = random.choice(candidate_topics)\n",
+    "    fake_answer = random.choice(answer_pools[fake_topic])\n",
+    "    return fake_answer\n",
+    "\n",
+    "part_df[\"fake_answer\"] = part_df[\"topic\"].apply(gen_fake_answer)\n",
+    "part_df.columns = [\"topic_id\", \"title\", \"answer\", \"fake_answer\"]\n",
+    "part_df[\"topic_text\"] = part_df[\"topic_id\"].apply(lambda x: label_to_topic[x])\n",
+    "part_df[\"topic\"] = part_df[\"topic_text\"] + \". \" + part_df[\"title\"]\n",
+    "\n",
+    "pos_index = np.array([True if random.random() <0.5 else False for _ in range(len(part_df))])\n",
+    "pos = part_df[pos_index].copy()\n",
+    "neg = part_df[~pos_index].copy()\n",
+    "pos = pos[[\"topic\", \"answer\"]]\n",
+    "pos.columns = [\"topic\", \"context\"]\n",
+    "neg = neg[[\"topic\", \"fake_answer\"]]\n",
+    "neg.columns = [\"topic\", \"context\"]\n",
+    "pos[\"label\"] = 1\n",
+    "pos = pos[pos[\"context\"].str.split().apply(lambda x: len(x)>3)].copy()\n",
+    "\n",
+    "neg[\"label\"] = 0\n",
+    "merge_df = pd.concat([pos, neg])\n",
+    "\n",
+    "def clean_text(text):\n",
+    "    return text.replace(r\"\\n\", \" \").replace(r\"<br />\", \" \")\n",
+    "merge_df[\"topic\"] = merge_df[\"topic\"].apply(clean_text)\n",
+    "merge_df[\"context\"] = merge_df[\"context\"].apply(clean_text)\n",
+    "\n",
+    "# merge_df.to_csv(\"data/pretrain/yahoo_answer_190722.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "amazon_review = pd.read_csv(\"data/pretrain/amazon_reviews_879819.csv\")\n",
+    "amazon_review = amazon_review.sample(200000)\n",
+    "amazon_review = amazon_review[amazon_review[\"context\"].str.split().apply(lambda x: len(x)>5)].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "amazon_review = pd.read_csv(\"data/amazon_review.csv\")"
+    "pretrain_df = pd.concat([merge_df, amazon_review]).sample(frac=1)\n",
+    "pretrain_df.to_csv(\"data/pretrain/pretrain_data.csv\", index=False)"
    ]
   },
   {
@@ -213,20 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from transformers import AutoTokenizer\n",
@@ -236,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,95 +308,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(<tf.Tensor: shape=(16, 256), dtype=int32, numpy=\n",
-       " array([[  101,   123,  2492, ...,     0,     0,     0],\n",
-       "        [  101,   146,   787, ...,  2039,  1128,   102],\n",
-       "        [  101, 17355,  2145, ...,     0,     0,     0],\n",
-       "        ...,\n",
-       "        [  101,  6424, 10928, ...,     0,     0,     0],\n",
-       "        [  101,  1488,  7871, ...,     0,     0,     0],\n",
-       "        [  101,  1128,  1138, ...,     0,     0,     0]], dtype=int32)>,\n",
-       " <tf.Tensor: shape=(16, 256), dtype=int32, numpy=\n",
-       " array([[0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        ...,\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0],\n",
-       "        [0, 0, 0, ..., 0, 0, 0]], dtype=int32)>,\n",
-       " <tf.Tensor: shape=(16, 256), dtype=int32, numpy=\n",
-       " array([[1, 1, 1, ..., 0, 0, 0],\n",
-       "        [1, 1, 1, ..., 1, 1, 1],\n",
-       "        [1, 1, 1, ..., 0, 0, 0],\n",
-       "        ...,\n",
-       "        [1, 1, 1, ..., 0, 0, 0],\n",
-       "        [1, 1, 1, ..., 0, 0, 0],\n",
-       "        [1, 1, 1, ..., 0, 0, 0]], dtype=int32)>,\n",
-       " <tf.Tensor: shape=(16,), dtype=int32, numpy=array([0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0], dtype=int32)>,\n",
-       " <tf.Tensor: shape=(16, 6), dtype=int32, numpy=\n",
-       " array([[  101,  2332,   111,  2357,  1920,   102],\n",
-       "        [  101,  1888,   102,     0,     0,     0],\n",
-       "        [  101,  1313,  5936,   102,     0,     0],\n",
-       "        [  101,  5295,   102,     0,     0,     0],\n",
-       "        [  101,  5309,  3621,   102,     0,     0],\n",
-       "        [  101, 12784,   102,     0,     0,     0],\n",
-       "        [  101,  3539,  1888,  1638,   102,     0],\n",
-       "        [  101, 12967,   102,     0,     0,     0],\n",
-       "        [  101,  1888,   173,  1964,  1181,   102],\n",
-       "        [  101, 12313,  1105,  4605,   102,     0],\n",
-       "        [  101,  2963,   102,     0,     0,     0],\n",
-       "        [  101, 12784,   102,     0,     0,     0],\n",
-       "        [  101,  1701,  2982,   102,     0,     0],\n",
-       "        [  101, 12784,  5143,  1111,  4909,   102],\n",
-       "        [  101,  2070,  8352,   102,     0,     0],\n",
-       "        [  101,  5309,  3621,   102,     0,     0]], dtype=int32)>,\n",
-       " <tf.Tensor: shape=(16, 6), dtype=int32, numpy=\n",
-       " array([[0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0]], dtype=int32)>,\n",
-       " <tf.Tensor: shape=(16, 6), dtype=int32, numpy=\n",
-       " array([[1, 1, 1, 1, 1, 1],\n",
-       "        [1, 1, 1, 0, 0, 0],\n",
-       "        [1, 1, 1, 1, 0, 0],\n",
-       "        [1, 1, 1, 0, 0, 0],\n",
-       "        [1, 1, 1, 1, 0, 0],\n",
-       "        [1, 1, 1, 0, 0, 0],\n",
-       "        [1, 1, 1, 1, 1, 0],\n",
-       "        [1, 1, 1, 0, 0, 0],\n",
-       "        [1, 1, 1, 1, 1, 1],\n",
-       "        [1, 1, 1, 1, 1, 0],\n",
-       "        [1, 1, 1, 0, 0, 0],\n",
-       "        [1, 1, 1, 0, 0, 0],\n",
-       "        [1, 1, 1, 1, 0, 0],\n",
-       "        [1, 1, 1, 1, 1, 1],\n",
-       "        [1, 1, 1, 1, 0, 0],\n",
-       "        [1, 1, 1, 1, 0, 0]], dtype=int32)>)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "iterator = iter(loader)\n",
     "next(iterator)"
