save pretraining metrics, build param via dummy input

--- a/debug_model.ipynb
+++ b/debug_model.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -27,7 +18,23 @@
     "from my_datasets import EnglishDataset, TestTokenizer, ChineseDataset\n",
     "from transformers import AutoTokenizer, TFAutoModel\n",
     "from label_mappings import *\n",
-    "from utils.eval_utils import quick_test"
+    "from utils.eval_utils import quick_test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import json\n",
+    "# model_checkpoint = \"checkpoint/ttee_pretrain_20000steps_0d_2e-5lr_2000_0.96_schedule_1cased_gate_0.3dropout_1loss\"\n",
+    "# ckpt_path = tf.train.latest_checkpoint(model_checkpoint)\n",
+    "# config_path = os.path.join(model_checkpoint, \"model_config.json\")\n",
+    "# config = json.load(open(config_path))\n",
+    "# from models.end_to_end_model import End2EndAspectSentimentModel\n",
+    "# model = End2EndAspectSentimentModel.from_config(config)\n",
+    "# model.build_params()"
    ]
   },
   {
@@ -49,6 +56,7 @@
    ],
    "source": [
     "from models.end_to_end_model import End2EndAspectSentimentModel\n",
+    "\n",
     "init_dir = 'bert_models/bert-base-cased'\n",
     "init_model = 'bert-base-cased'\n",
     "# file_path = '../data/semeval2016/ABSA16_Restaurants_Train_SB1_v2.xml'\n",
@@ -59,7 +67,7 @@
     "#     dataset.generate_string_sample,\n",
     "#     output_types=(tf.string, tf.string)\n",
     "# ).batch(batch_size=8).map(dataset.wrap_map)\n",
-    "model = End2EndAspectSentimentModel(init_bert_model=init_model, sentence_b=ASPECT_SENTENCE, cache_dir=init_dir, hot_attention=True, fuse_strategy=\"gate\")"
+    "# model = End2EndAspectSentimentModel(init_bert_model=init_model, sentence_b=ASPECT_SENTENCE, cache_dir=init_dir, hot_attention=True, fuse_strategy=\"gate\")"
    ]
   },
   {
@@ -2930,7 +2938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5 (default, Sep  4 2020, 07:30:14) \n[GCC 7.3.0]"
+   "version": "3.8.5"
   },
   "vscode": {
    "interpreter": {
