--- a/debug_model.ipynb
+++ b/debug_model.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -24,23 +33,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "595d5b9533e8449fa9752b08fa277ff4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/570 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "37d5cdd8e3a5400e8a054c51911c8ec6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/536M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some layers from the model checkpoint at bert-base-uncased were not used when initializing TFBertModel: ['mlm___cls', 'nsp___cls']\n",
+      "- This IS expected if you are initializing TFBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing TFBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "All the layers of TFBertModel were initialized from the model checkpoint at bert-base-uncased.\n",
+      "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFBertModel for predictions without further training.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82452ac0cf26405a803fe47674dccdbc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/232k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5ea4023a2a3f40ca9b120b7fb23eefab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/466k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:AutoGraph could not transform <bound method Socket.send of <zmq.sugar.socket.Socket object at 0x7f1ddc392340>> and will run it as-is.\n",
+      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
+      "Cause: module, class, method, function, traceback, frame, or code object was expected, got cython_function_or_method\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <bound method Socket.send of <zmq.sugar.socket.Socket object at 0x7f1ddc392340>> and will run it as-is.\n",
+      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
+      "Cause: module, class, method, function, traceback, frame, or code object was expected, got cython_function_or_method\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The parameters `output_attentions`, `output_hidden_states` and `use_cache` cannot be updated when calling a model.They have to be set to True/False in the config object (i.e.: `config=XConfig.from_pretrained('name', output_attentions=True)`).\n",
+      "The parameter `return_dict` cannot be set in graph mode and will always be set to `True`.\n",
+      "The parameters `output_attentions`, `output_hidden_states` and `use_cache` cannot be updated when calling a model.They have to be set to True/False in the config object (i.e.: `config=XConfig.from_pretrained('name', output_attentions=True)`).\n",
+      "The parameter `return_dict` cannot be set in graph mode and will always be set to `True`.\n",
+      "The parameters `output_attentions`, `output_hidden_states` and `use_cache` cannot be updated when calling a model.They have to be set to True/False in the config object (i.e.: `config=XConfig.from_pretrained('name', output_attentions=True)`).\n",
+      "The parameter `return_dict` cannot be set in graph mode and will always be set to `True`.\n",
+      "The parameters `output_attentions`, `output_hidden_states` and `use_cache` cannot be updated when calling a model.They have to be set to True/False in the config object (i.e.: `config=XConfig.from_pretrained('name', output_attentions=True)`).\n",
+      "The parameter `return_dict` cannot be set in graph mode and will always be set to `True`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x7f1c0496da30>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# import json\n",
-    "# from models.end_to_end_model import End2EndAspectSentimentModel\n",
-    "# model_checkpoint = \"checkpoint/ttee_pretrain_100000steps_0d_2e-5lr_2000_0.96_schedule_0cased_gate_0.3dropout_1loss/\"\n",
-    "# ckpt_path = tf.train.latest_checkpoint(model_checkpoint)\n",
-    "# config_path = os.path.join(model_checkpoint, \"model_config.json\")\n",
-    "# config = json.load(open(config_path))\n",
+    "import json\n",
+    "from models.end_to_end_model import End2EndAspectSentimentModel\n",
+    "model_checkpoint = \"checkpoint/ttee_pretrain_20000steps_0d_2e-5lr_2000_0.96_schedule_0cased_gate_0.3dropout_1loss/\"\n",
+    "ckpt_path = tf.train.latest_checkpoint(model_checkpoint)\n",
+    "config_path = os.path.join(model_checkpoint, \"model_config.json\")\n",
+    "config = json.load(open(config_path))\n",
     "\n",
-    "# model = End2EndAspectSentimentModel.from_config(config)\n",
-    "# model.build_params()\n",
-    "# ckpt = tf.train.Checkpoint(model=model)\n",
-    "# ckpt.restore(ckpt_path)\n",
-    "\n",
-    "# model.contain_dense.trainable_variables"
+    "model = End2EndAspectSentimentModel.from_config(config)\n",
+    "model.build_params()\n",
+    "ckpt = tf.train.Checkpoint(model=model)\n",
+    "ckpt.restore(ckpt_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"end2_end_aspect_sentiment_model\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " tf_bert_model (TFBertModel)  multiple                 109482240 \n",
+      "                                                                 \n",
+      " fuse_net (FuseNet)          multiple                  1181184   \n",
+      "                                                                 \n",
+      " target_extraction_block (Ta  multiple                 2322      \n",
+      " rgetExtractionBlock)                                            \n",
+      "                                                                 \n",
+      " tf_bert_attention (TFBertAt  multiple                 2363904   \n",
+      " tention)                                                        \n",
+      "                                                                 \n",
+      " sequential_1 (Sequential)   (36, 1)                   769       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 113,058,068\n",
+      "Trainable params: 113,030,419\n",
+      "Non-trainable params: 27,649\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.te_block.trainable = True\n",
+    "model.summary()"
    ]
   },
   {
@@ -1469,7 +1620,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   },
   "vscode": {
    "interpreter": {
