update sim matrix visualize, mean pooling

--- a/debug_model.ipynb
+++ b/debug_model.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -33,37 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "595d5b9533e8449fa9752b08fa277ff4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/570 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37d5cdd8e3a5400e8a054c51911c8ec6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/536M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -76,42 +39,14 @@
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82452ac0cf26405a803fe47674dccdbc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ea4023a2a3f40ca9b120b7fb23eefab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:AutoGraph could not transform <bound method Socket.send of <zmq.sugar.socket.Socket object at 0x7f1ddc392340>> and will run it as-is.\n",
+      "WARNING:tensorflow:AutoGraph could not transform <bound method Socket.send of <zmq.sugar.socket.Socket object at 0x7f8ac47c4460>> and will run it as-is.\n",
       "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
       "Cause: module, class, method, function, traceback, frame, or code object was expected, got cython_function_or_method\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "WARNING: AutoGraph could not transform <bound method Socket.send of <zmq.sugar.socket.Socket object at 0x7f1ddc392340>> and will run it as-is.\n",
+      "WARNING: AutoGraph could not transform <bound method Socket.send of <zmq.sugar.socket.Socket object at 0x7f8ac47c4460>> and will run it as-is.\n",
       "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
       "Cause: module, class, method, function, traceback, frame, or code object was expected, got cython_function_or_method\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n"
@@ -134,10 +69,10 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x7f1c0496da30>"
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x7f892c26bbb0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,6 +89,27 @@
     "model.build_params()\n",
     "ckpt = tf.train.Checkpoint(model=model)\n",
     "ckpt.restore(ckpt_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tokenizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-42cfff251026>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_tokenizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTestTokenizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mASPECT_SENTENCE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmask_sb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'tokenizer' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "test_tokenizer = TestTokenizer(tokenizer, ASPECT_SENTENCE, mask_sb, model_type)"
    ]
   },
   {
@@ -1052,38 +1008,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some layers from the model checkpoint at bert-base-uncased were not used when initializing TFBertModel: ['nsp___cls', 'mlm___cls']\n",
+      "Some layers from the model checkpoint at bert-base-uncased were not used when initializing TFBertModel: ['mlm___cls', 'nsp___cls']\n",
       "- This IS expected if you are initializing TFBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing TFBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "All the layers of TFBertModel were initialized from the model checkpoint at bert-base-uncased.\n",
-      "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFBertModel for predictions without further training.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:AutoGraph could not transform <bound method Socket.send of <zmq.Socket(zmq.PUSH) at 0x7f73684ac760>> and will run it as-is.\n",
-      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
-      "Cause: module, class, method, function, traceback, frame, or code object was expected, got cython_function_or_method\n",
-      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "WARNING: AutoGraph could not transform <bound method Socket.send of <zmq.Socket(zmq.PUSH) at 0x7f73684ac760>> and will run it as-is.\n",
-      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
-      "Cause: module, class, method, function, traceback, frame, or code object was expected, got cython_function_or_method\n",
-      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFBertModel for predictions without further training.\n",
       "The parameters `output_attentions`, `output_hidden_states` and `use_cache` cannot be updated when calling a model.They have to be set to True/False in the config object (i.e.: `config=XConfig.from_pretrained('name', output_attentions=True)`).\n",
       "The parameter `return_dict` cannot be set in graph mode and will always be set to `True`.\n",
       "The parameters `output_attentions`, `output_hidden_states` and `use_cache` cannot be updated when calling a model.They have to be set to True/False in the config object (i.e.: `config=XConfig.from_pretrained('name', output_attentions=True)`).\n",
@@ -1098,7 +1034,7 @@
    "source": [
     "import json\n",
     "from models.end_to_end_model import End2EndAspectSentimentModel\n",
-    "model_checkpoint = \"checkpoint/ttee_pretrain_20000steps_0d_2e-5lr_2000_0.96_schedule_0cased_gate_0.3dropout_1loss/\"\n",
+    "model_checkpoint = \"checkpoint/ttee_pretrain_db_amazon_less_pos.csv_pretrain_60000steps_0d_2e-5lr_3000_0.96_schedule_0cased_update_0.2dropout/\"\n",
     "ckpt_path = tf.train.latest_checkpoint(model_checkpoint)\n",
     "config_path = os.path.join(model_checkpoint, \"model_config.json\")\n",
     "config = json.load(open(config_path))\n",
@@ -1119,48 +1055,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# init_dir = \"bert_models/bert-base-uncased\"\n",
+    "# init_model = 'bert-base-uncased'\n",
+    "# mask_sb = True\n",
+    "# model_type = \"end_to_end\"\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(init_model, cache_dir=init_dir)\n",
+    "# tokenizer.add_special_tokens({'pad_token': '[PAD]'})\n",
+    "# test_tokenizer = TestTokenizer(tokenizer, ASPECT_SENTENCE, mask_sb, model_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'decoded_sequence': <tf.Tensor: shape=(1, 1, 14), dtype=int32, numpy=array([[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]], dtype=int32)>,\n",
-       " 'output_logits': <tf.Tensor: shape=(1, 1, 14, 3), dtype=float32, numpy=\n",
-       " array([[[[-0.15353522, -0.37707904, -0.21165505],\n",
-       "          [-0.15509103, -0.43709278,  0.07178876],\n",
-       "          [-0.37270695, -0.41951853, -0.06583035],\n",
-       "          [-0.05540875, -0.25149837,  0.10931039],\n",
-       "          [-0.10446075, -0.20421842, -0.06028605],\n",
-       "          [-0.12134092, -0.33680046,  0.06987989],\n",
-       "          [-0.15932016, -0.36780417,  0.02056742],\n",
-       "          [-0.09995717, -0.3719234 , -0.15008849],\n",
-       "          [-0.09348245, -0.30741316, -0.24694425],\n",
-       "          [-0.14302737, -0.39577803, -0.08638489],\n",
-       "          [-0.04789276, -0.3593043 , -0.11060742],\n",
-       "          [-0.12657256, -0.32238847, -0.19769469],\n",
-       "          [-0.02290891, -0.42602462, -0.04573095],\n",
-       "          [-0.09866045, -0.13591361,  0.11215737]]]], dtype=float32)>,\n",
-       " 'output_cls_states': <tf.Tensor: shape=(1, 1), dtype=float32, numpy=array([[-2.2881978]], dtype=float32)>}"
+       "{'decoded_sequence': <tf.Tensor: shape=(1, 1, 17), dtype=int32, numpy=array([[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]], dtype=int32)>,\n",
+       " 'output_logits': <tf.Tensor: shape=(1, 1, 17, 3), dtype=float32, numpy=\n",
+       " array([[[[0.3339855 , 1.5488535 , 0.53060734],\n",
+       "          [2.1150715 , 2.9006262 , 2.2540603 ],\n",
+       "          [1.1242604 , 2.0321634 , 1.3172444 ],\n",
+       "          [2.2598667 , 3.7435617 , 2.6251085 ],\n",
+       "          [1.8312638 , 2.3520985 , 2.3375266 ],\n",
+       "          [2.2344587 , 3.1792464 , 2.500115  ],\n",
+       "          [2.1726778 , 3.4260092 , 2.6763983 ],\n",
+       "          [2.0376005 , 3.9933152 , 1.9630762 ],\n",
+       "          [2.3745065 , 3.7014742 , 2.2468858 ],\n",
+       "          [1.897906  , 2.7479606 , 2.2566772 ],\n",
+       "          [0.9903881 , 1.8187201 , 1.2670729 ],\n",
+       "          [1.8719382 , 2.7461789 , 2.1032097 ],\n",
+       "          [1.0907042 , 1.9613485 , 1.4420848 ],\n",
+       "          [1.4756262 , 2.203     , 1.8667266 ],\n",
+       "          [1.4946609 , 2.3378208 , 1.6724123 ],\n",
+       "          [0.9005879 , 1.9585993 , 1.2643363 ],\n",
+       "          [0.35056174, 1.2990711 , 0.75588906]]]], dtype=float32)>,\n",
+       " 'output_cls_states': <tf.Tensor: shape=(1, 1), dtype=float32, numpy=array([[2.8641465]], dtype=float32)>,\n",
+       " 'sim_matrix': <tf.Tensor: shape=(1, 1, 17, 1), dtype=float32, numpy=\n",
+       " array([[[[0.04988611],\n",
+       "          [0.08425312],\n",
+       "          [0.03885285],\n",
+       "          [0.11224487],\n",
+       "          [0.0850076 ],\n",
+       "          [0.10294122],\n",
+       "          [0.12894312],\n",
+       "          [0.11374516],\n",
+       "          [0.09810883],\n",
+       "          [0.08871009],\n",
+       "          [0.03390899],\n",
+       "          [0.08629744],\n",
+       "          [0.03111301],\n",
+       "          [0.05444309],\n",
+       "          [0.04472494],\n",
+       "          [0.01922287],\n",
+       "          [0.11106602]]]], dtype=float32)>}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test_data = [\n",
-    "    \"the iphone is hard to use, low battery, high price\"\n",
+    "    \"the actor is skillful, I like the scenario and story of the film\"\n",
     "]\n",
     "\n",
     "aspect_texts = [\n",
-    "    [\"\"]\n",
+    "    [\"scenario positive\"],\n",
     "]\n",
     "data = test_tokenizer.tokenize(test_data, aspect_texts=aspect_texts)\n",
     "inputs = [data['input_ids'], data['token_type_ids'], data['attention_mask']]\n",
     "aspect_inputs = [data['aspect_input_ids'], data['aspect_token_type_ids'], data['aspect_attention_mask']]\n",
-    "model(inputs, aspect_inputs, phase=\"dynamic_aspect_test\")"
+    "output = model(inputs, aspect_inputs, phase=\"dynamic_aspect_test\", output_attentions=True)\n",
+    "output"
    ]
   },
   {
@@ -1606,7 +1579,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1620,7 +1593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5 (default, Sep  4 2020, 07:30:14) \n[GCC 7.3.0]"
   },
   "toc": {
    "base_numbering": 1,
@@ -1637,7 +1610,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "ab1f4777d8eb8dfce46131a069ac753eeb3c9da22cbbba2710843f8e042f9b4a"
    }
   }
  },
