--- a/test.ipynb
+++ b/test.ipynb
@@ -2,39 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = '-1'\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-12-30 04:46:15.174467: E tensorflow/stream_executor/cuda/cuda_driver.cc:271] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
-      "2023-12-30 04:46:15.174525: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:163] no NVIDIA GPU device is present: /dev/nvidia0 does not exist\n",
-      "2023-12-30 04:46:15.175541: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (309661463.py, line 29)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_760219/309661463.py\"\u001b[0;36m, line \u001b[0;32m29\u001b[0m\n\u001b[0;31m    sample_mask =\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(1, 1, 3), dtype=int32, numpy=array([[[0, 1, 2]]], dtype=int32)>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -44,30 +33,36 @@
     "# b = a.concat()\n",
     "# tf.reduce_mean(b, 0)\n",
     "\n",
-    "a = tf.constant([[[0, 1, 2]]])\n",
     "\n",
-    "tf.transpose(a, [0, 1, 2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(), dtype=bool, numpy=False>"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "flag = tf.cast(tf.reduce_sum(tf.zeros((16,16, 16))), tf.bool)\n",
-    "flag"
+    "labels = np.zeros((16, 363))\n",
+    "for i in range(16):\n",
+    "    labels[i, np.random.randint(0, 363)] = 1\n",
+    "np.nonzero(labels)\n",
+    "\n",
+    "def negative_sampling(labels, n_sample=32):\n",
+    "    num_rows, _ = labels.shape\n",
+    "    sampled_indices = []\n",
+    "    \n",
+    "    for i in range(num_rows):\n",
+    "        positive_indices = np.where(labels[i] == 1)[0]\n",
+    "        negative_indices = np.where(labels[i] == 0)[0]\n",
+    "        assert len(positive_indices) < n_sample\n",
+    "\n",
+    "        chosen_indices = positive_indices\n",
+    "        num_negatives_needed = n_sample - len(chosen_indices)\n",
+    "        chosen_negative_indices = np.random.choice(negative_indices, size=num_negatives_needed, replace=False)\n",
+    "        chosen_indices = np.concatenate((chosen_indices, chosen_negative_indices))\n",
+    "        \n",
+    "        # 打乱选择的索引，使正负样本混合\n",
+    "        sampled_indices.append(chosen_indices)\n",
+    "    \n",
+    "    batch_index = np.repeat(np.arange(num_rows)[:, None], n_sample, axis=1)\n",
+    "    return batch_index, np.array(sampled_indices)\n",
+    "\n",
+    "c = np.random.rand(16, 64, 128)\n",
+    "bi, ri = negative_sampling(labels, 32)\n",
+    "ri\n",
+    "np.nonzero(labels)"
    ]
   },
   {
