--- a/result_analysis.ipynb
+++ b/result_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,12 +109,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AS': {'p': [0.4786253143336127],\n",
+       "  'r': [0.5744466800804829],\n",
+       "  'f1': [0.5221764974851395]},\n",
+       " 'TS': {'p': [0.6741463414634147],\n",
+       "  'r': [0.6875621890547263],\n",
+       "  'f1': [0.6807881773399014]},\n",
+       " 'TA': {'p': [0.4472843450479233],\n",
+       "  'r': [0.5410628019323671],\n",
+       "  'f1': [0.489724529951902]},\n",
+       " 'A': {'p': [0.5411255411255411],\n",
+       "  'r': [0.6325910931174089],\n",
+       "  'f1': [0.5832944470368643]},\n",
+       " 'T': {'p': [0.7726809378185525],\n",
+       "  'r': [0.7641129032258065],\n",
+       "  'f1': [0.7683730359858084]},\n",
+       " 'TAS': {'p': [0.39704739704739705],\n",
+       "  'r': [0.4918190567853705],\n",
+       "  'f1': [0.43938091143594155]},\n",
+       " 'TAS_Implicity_Only': {'p': [0.42016806722689076],\n",
+       "  'r': [0.4878048780487805],\n",
+       "  'f1': [0.45146726862302483]}}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "exp = \"ttee_laptop_30epoch_128d_1aug_2e-5lr_decaystep_0.91decayrate_0cased_gate_0.2dropout_dropnull_1loss_BIO\"\n",
-    "evaluator = MultiTaskEvaluatior(TASK_CONFIG, f\"output/{exp}\")"
+    "exp = \"ttee_laptop_acos_100epoch_512d_1aug_2e-5lr_0decaystep_0.90decayrate_0.2dropout_0.2detect_dropout_1loss_BIO_ce_no_asp_batch_gate_50neg_16_batch\"\n",
+    "evaluator = MultiTaskEvaluatior(TASK_CONFIG, f\"output/{exp}\")\n",
+    "epoch = 30\n",
+    "evaluator.parse(epoch-1)\n",
+    "for t in [\"AS\", \"TS\", \"TA\", \"A\", \"T\", \"TAS\", \"TAS_Implicity_Only\"]:\n",
+    "    evaluator.eval(t)\n",
+    "evaluator.eval_results"
    ]
   },
   {
@@ -3569,7 +3605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
